--- a/public/styles/getsingleproblem.css
+++ b/public/styles/getsingleproblem.css
@@ -10,6 +10,15 @@
 #description-container p{
     margin-bottom: 3%;
 }
+#sub-tip-text{
+    text-align: left;
+    line-height: 2.25;
+    color: rgb(100,100,100);
+}
+#sub-tip-text li{
+    font-weight: bold;
+}
+
 
 .answer{
     min-height: 80px;
