--- a/public/styles/index-main.css
+++ b/public/styles/index-main.css
@@ -6,5 +6,18 @@
     margin-top: 2.5%;
 }
 
+.section-img{
+    height: 80px;
+    margin: 40px auto 20px auto;
+}
+
+.section-title{
+    margin-bottom: 30px;
+}
+
+.section-text{
+    line-height: 1.8;
+}
+
 
 
